--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
           <version>4.13.2</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+    </dependency>
   </dependencies>
 
   <build>
