--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
           <artifactId>javafx-maven-plugin</artifactId>
           <version>${javafx.maven.plugin.version}</version>
           <configuration>
-            <mainClass>org.openjfx.App</mainClass>
+            <mainClass>GUI.GUIStarter</mainClass>
           </configuration>
         </plugin>
       </plugins>
